# itsmymeme

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENCE  README.md  docker-compose.yml
src/: main.rs  serve.rs  upload.html  upload.rs
