[package]
name = "itsmymeme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = "0.5.2"
uuid = { version = "1.8.0", features = ["v4"] }
infer = "0.15.0"
